fix(web): don't wrap white spaces in side-wrapper (#1338)
* fix(web): don't wrap white spaces in side-wrapper

* fix(web): side-value width

--- a/packages/uhk-web/src/app/components/slider-wrapper/slider-wrapper.component.scss
+++ b/packages/uhk-web/src/app/components/slider-wrapper/slider-wrapper.component.scss
@@ -1,3 +1,5 @@
+$side-value-width: 100px;
+
 :host {
     label {
         display: block;
@@ -15,15 +17,16 @@
     }
 
     .slider-container {
-        width: 80%;
+        width: calc(100% - #{$side-value-width});
     }
 
     .slider-value {
-        width: 20%;
+        width: $side-value-width;
     }
 
     .value-indicator {
-        margin: 1rem 1rem 1rem 3rem;
+        padding: 1rem 1rem 1rem 3rem;
         vertical-align: middle;
+        white-space: nowrap;
     }
 }
